--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^3.4.0",
     "gatsby-plugin-google-gtag": "^4.11.0",
     "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-sitemap": "^5.11.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^3.4.0",
     "gatsby-transformer-remark": "^4.1.0",
